// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert /> renders with button and dismissible props 1`] = `
<div
  className="fade alert-content alert show"
  role="alert"
>
  <div
    className="pgn__alert-message-wrapper"
  >
    <div
      className="alert-message-content"
    >
      Alert
    </div>
    <div
      className="pgn__alert-actions pgn__action-row"
    >
      <span
        className="pgn__action-row-spacer"
      />
      <button
        className="btn btn-tertiary btn-sm"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Dismiss
      </button>
      <button
        className="btn btn-primary btn-sm"
        disabled={false}
        type="button"
      >
        Hello
      </button>
    </div>
  </div>
</div>
`;

exports[`<Alert /> renders with button prop 1`] = `
<div
  className="fade alert-content alert show"
  role="alert"
>
  <div
    className="pgn__alert-message-wrapper"
  >
    <div
      className="alert-message-content"
    >
      Alert
    </div>
    <div
      className="pgn__alert-actions pgn__action-row"
    >
      <span
        className="pgn__action-row-spacer"
      />
      <button
        className="btn btn-primary btn-sm"
        disabled={false}
        type="button"
      >
        Hello
      </button>
    </div>
  </div>
</div>
`;

exports[`<Alert /> renders with dismissible prop 1`] = `
<div
  className="fade alert-content alert show"
  role="alert"
>
  <div
    className="pgn__alert-message-wrapper"
  >
    <div
      className="alert-message-content"
    >
      Alert
    </div>
    <div
      className="pgn__alert-actions pgn__action-row"
    >
      <span
        className="pgn__action-row-spacer"
      />
      <button
        className="btn btn-tertiary btn-sm"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Dismiss
      </button>
    </div>
  </div>
</div>
`;

exports[`<Alert /> renders with icon prop 1`] = `
<div
  className="fade alert-content alert show"
  role="alert"
>
  <span
    className="pgn__icon alert-icon"
  >
    <svg
      aria-hidden={true}
      fill="none"
      focusable={false}
      height={24}
      role="img"
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
        fill="currentColor"
      />
    </svg>
  </span>
  <div
    className="pgn__alert-message-wrapper"
  >
    <div
      className="alert-message-content"
    >
      Alert
    </div>
  </div>
</div>
`;

exports[`<Alert /> renders with stacked prop 1`] = `
<div
  className="fade alert-content alert show"
  role="alert"
>
  <div
    className="pgn__alert-message-wrapper-stacked"
  >
    <div
      className="alert-message-content"
    >
      Alert
    </div>
    <div
      className="pgn__alert-actions pgn__action-row"
    >
      <span
        className="pgn__action-row-spacer"
      />
      <button
        className="btn btn-tertiary btn-sm"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Dismiss
      </button>
      <button
        className="btn btn-primary btn-sm"
        disabled={false}
        type="button"
      >
        Hello
      </button>
    </div>
  </div>
</div>
`;

exports[`<Alert /> renders without any props 1`] = `
<div
  className="fade alert-content alert show"
  role="alert"
>
  <div
    className="pgn__alert-message-wrapper"
  >
    <div
      className="alert-message-content"
    >
      Alert
    </div>
  </div>
</div>
`;

exports[`<Alert /> switches to stacked variant at extra small breakpoint 1`] = `null`;
